# chatbot-base

./: .env.example  .gitignore  PROMPT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 20241218_000000_001_initial_schema_initial_schema.py  __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  chat.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chat.py  user.py
backend/app/services/: __init__.py  auth.py  chat.py  llm.py
backend/tests/: __init__.py  conftest.py  test_health.py
frontend/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: dev-server.mjs  generate-icons.mjs  update-capabilities.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: NotificationContext.tsx  OverflowTooltip.tsx
frontend/src/hooks/: useStore.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: authSlice.ts  chatSlice.ts  themeSlice.ts
scripts/: pull-model.ps1  pull-model.sh
